feat(astro): Change links in index.mdx CTA buttons

--- a/starlight/tailwind/src/content/docs/index.mdx
+++ b/starlight/tailwind/src/content/docs/index.mdx
@@ -8,10 +8,10 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: Get Started
-      link: /guides/example/
+      link: /guides/introduction/
       icon: right-arrow
     - text: Browse Components
-      link: https://starlight.astro.build
+      link: /guides/components/overview
       icon: external
       variant: minimal
 ---
