feat(astro): Change button icon in index.mdx

--- a/starlight/tailwind/src/content/docs/index.mdx
+++ b/starlight/tailwind/src/content/docs/index.mdx
@@ -12,7 +12,7 @@ hero:
       icon: right-arrow
     - text: Browse Components
       link: /guides/components/overview
-      icon: external
+      icon: open-book
       variant: minimal
 ---
 
